<resources>
    <string name="app_name">AndroidOutOfMemory</string>
    <string name="closeable">Closeable</string>
    <string name="fileSteamLeak">FileStream Leak</string>
    <string name="kaboom">Kaboom!</string>
    <string name="innerClasses">Inner Classes</string>
    <string name="innerAsyncTask">InnerAsyncTask</string>
    <string name="leaks">Leaks</string>
    <string name="staticActivity">Static activity</string>
    <string name="staticView">Static view</string>
    <string name="staticInflater">Static Layout Inflater</string>
    <string name="staticContext">Static Context</string>
    <string name="singleton">Singleton</string>
    <string name="another_text">Another text</string>
    <string name="anonymousRunnable">Anonymous Runnable</string>
    <string name="viewModel">ViewModel</string>
    <string name="startLocationUpdates">Start location updates</string>
    <string name="startObservable">Start Observable</string>
    <string name="image">Image</string>
</resources>
